[gd_scene load_steps=4 format=3 uid="uid://dk1c4rp3qky24"]

[ext_resource type="Script" path="res://Player/Weapons/Bullets/bullet.gd" id="1_7ggqm"]
[ext_resource type="Texture2D" uid="uid://bdqglnp8spwlo" path="res://Textures/test/sniper_bullet.png" id="2_t5sb3"]
[ext_resource type="PackedScene" uid="uid://v8gdd1c8vc4t" path="res://Player/Weapons/Bullets/hexagon_attack.tscn" id="3_efauc"]

[node name="BulletBase" type="Node2D"]
script = ExtResource("1_7ggqm")

[node name="Bullet" type="Node2D" parent="."]

[node name="BulletSprite" type="Sprite2D" parent="Bullet"]
texture_filter = 1
texture = ExtResource("2_t5sb3")

[node name="ExpireTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="HexagonAttack" parent="." instance=ExtResource("3_efauc")]

[connection signal="timeout" from="ExpireTimer" to="." method="_on_expire_timer_timeout"]
